make-a-wish-salesforce/src/objects/cg__CaseFile__c.object
<CustomObject>
    <fields>
        <fullName>Add_l_Publicity_Approval__c</fullName>
        <description>will contains Publicity Ok value from contact</description>
        <label>Publicity Ok</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <formula>cg__Case__r.ChapterName__r.Name</formula>
        <label>Chapter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If &apos;True&apos; a Check request has been submitted for the attached receipt.</description>
        <label>Check Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_Name__c</fullName>
        <label>Child Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>It will hold the publicity notes from contact</description>
        <label>Publicity Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County from Contact</description>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Path__c</fullName>
        <label>File Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Kind_Recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures whether an in-kind receipt uploaded by a volunteer has been recorded in the system so it displays in the wish budget.</description>
        <label>In-Kind Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Case_File__c</fullName>
        <description>Is &apos;True&apos; if the current user is the owner of the related case.</description>
        <formula>IF(cg__Case__r.OwnerId = $User.Id, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Case File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Folder_Name__c</fullName>
        <description>Parent Folder Name</description>
        <label>Parent Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Diagnosis__c</fullName>
        <label>Primary Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Type__c</fullName>
        <description>Captures what type of receipt is being uploaded by a volunteer.</description>
        <label>Receipt Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reimbursement Form</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Receipt</fullName>
                </value>
                <value>
                    <fullName>In-Kind Donation Receipt</fullName>
                </value>
                <value>
                    <fullName>In-Kind Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wish_Date__c</fullName>
        <label>Wish Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Type__c</fullName>
        <label>Wish Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Files</relationshipLabel>
        <relationshipName>Case_Files</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cg__Content_Type__c</fullName>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cg__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__File_Size__c</fullName>
        <formula>IF(!(ISBLANK(cg__Shortcut__c )),  RIGHT(cg__Shortcut__c, (LEN(cg__Shortcut__c) - FIND(&apos;:&apos;, cg__Shortcut__c))) ,IF(cg__File_Size_in_Bytes__c &gt; 1024, 
IF(cg__File_Size_in_Bytes__c &gt; 1048576, 
IF(cg__File_Size_in_Bytes__c &gt; 1073741824, 
TEXT(ROUND((cg__File_Size_in_Bytes__c /1073741824),2)) &amp; &quot; GB&quot;, 
TEXT(ROUND((cg__File_Size_in_Bytes__c /1048576),2)) &amp; &quot; MB&quot;), 
TEXT(ROUND((cg__File_Size_in_Bytes__c /1024),2)) &amp; &quot; KB&quot;), 
TEXT(cg__File_Size_in_Bytes__c) &amp; &quot; bytes&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__File_Size_in_Bytes__c</fullName>
        <label>File Size in Bytes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cg__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Is_Latest_Version__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Latest Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Is_Parent_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Number_Of_Files__c</fullName>
        <label>Number Of Files</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cg__Page_Count__c</fullName>
        <label>Page Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cg__Parent_Folder_Id__c</fullName>
        <description>Stores the parent folder&apos;s Id</description>
        <label>Parent Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Preview_Key__c</fullName>
        <label>Preview Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Preview_Version_Id__c</fullName>
        <label>Preview Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the file can be accessed by portal users. If &apos;private&apos;, it is not accessible by portal users.</description>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Shortcut__c</fullName>
        <label>Shortcut</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Sync_Id__c</fullName>
        <label>Sync Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Tags__c</fullName>
        <label>Tags</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cg__Thumbnail_Key__c</fullName>
        <label>Thumbnail Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Thumbnail_Version_Id__c</fullName>
        <label>Thumbnail Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Version_Description__c</fullName>
        <label>Version Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Version_Id__c</fullName>
        <label>Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__WIP__c</fullName>
        <defaultValue>true</defaultValue>
        <label>WIP</label>
        <type>Checkbox</type>
    </fields>
    <label>Case File</label>
    <listViews>
        <fullName>My_Receipts</fullName>
        <columns>NAME</columns>
        <columns>Child_Name__c</columns>
        <columns>Receipt_Type__c</columns>
        <columns>Check_Requested__c</columns>
        <columns>File_Path__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Receipt_Type__c</field>
            <operation>equals</operation>
            <value>Reimbursement Form,Reimbursement Receipt,In-Kind Donation Receipt,In-Kind Form</value>
        </filters>
        <filters>
            <field>My_Case_File__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Check_Requested__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>My Wishes - Open Receipts</label>
    </listViews>
    <listViews>
        <fullName>My_Wishes_In_Kind_Donations</fullName>
        <columns>NAME</columns>
        <columns>Child_Name__c</columns>
        <columns>Receipt_Type__c</columns>
        <columns>In_Kind_Recorded__c</columns>
        <columns>File_Path__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Receipt_Type__c</field>
            <operation>equals</operation>
            <value>In-Kind Donation Receipt,In-Kind Form</value>
        </filters>
        <filters>
            <field>My_Case_File__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>In_Kind_Recorded__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>My Wishes - In-Kind Donations</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Case File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Files</pluralLabel>
    <recordTypes>
        <fullName>cg__Personal_Data</fullName>
        <active>true</active>
        <label>Personal Data</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>